# CR-Locomotive-Allocation

./: .gitignore  LICENSE  README.md
.github/workflows/: deploy-pages.yml  fetch_data.yml  fetch_data.yml.bak  fetch_detail_data.yml  unfetch_checker.yml
backend/: curated.json  details_fetch.py  extra_process.py  fetch.py  fetch_url.json  format.py  main.py  pyproject.toml  utils.py
backend/detail_fetch/: after_fetch_process.py  checker.py  detail_format.py  detail_main.py  utils.py
data/: fix.json  raw_result.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: copy-data.js
frontend/src/: App.vue  config.ts
frontend/src/components/: EmptyState.vue  HeaderNav.vue  ImageViewer.vue  QueryPanel.vue  ResultTable.vue
frontend/src/composables/: useData.ts  useFilter.ts  useQuery.ts
frontend/src/pages/: About.vue  Guide.vue  Query.vue  Report.vue
frontend/src/router/: index.ts
frontend/src/types/: index.ts
